# vino_rqt_graph

pipeline_srv_msgs/: CMakeLists.txt
rqt_vino_plugin/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_vino_plugin/resource/: add_inference_dialog.ui  add_output_dialog.ui  rqt_vino_plugin.ui
rqt_vino_plugin/scripts/: rqt_vino_plugin
rqt_vino_plugin/src/rqt_vino_plugin/: dotparser.py  inference_dialog.py  input_dialog.py  interactive_graphics_view.py  output_dialog.py  vino_graph.py  vino_pydot_factory.py
vino_param_lib/: CMakeLists.txt  setup.py
vino_param_lib/include/vino_param_lib/: param_manager.h
vino_param_lib/param/: models.yaml  pipeline.yaml
vino_param_lib/src/: param_manager.cpp
vino_param_lib/src/python_wrapper/: __init__.py  param_manager_py_wrapper.cpp
vino_pipeline_graph/: CHANGELOG.rst  CMakeLists.txt  models.yaml  package.xml  plugin_description.xml
vino_pipeline_graph/icons/: resources.qrc  resources.rcc
vino_pipeline_graph/scripts/: send_test_msgs.py
vino_pipeline_graph/src/: base_graph_node.cpp  base_graph_node.h  graph_panel.cpp  graph_panel.h  main_panel.cpp  main_panel.h  pipeline_graph_node.h  ui_graph_node.h
vino_pipeline_graph/src/service/: pipeline_service.cpp  pipeline_service.h
