<package>
  <name>vino_pipeline_graph</name>
  <version>0.10.3</version>
  <description>
     A visualization tool of ros openvino pipeline graph
  </description>
  <maintainer email="yang1.lu@intel.com">Yang Lu</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/vino_pipeline_graph</url>
  <author>Yang Lu</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>

  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>rviz</run_depend>

  <export>
      <rosdoc config="${prefix}/rosdoc.yaml"/>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
